<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_dialogsavescore"
    android:gravity="center|top"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SAVE GAME"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        ></TextView>
    <EditText
        android:id="@+id/edtEmail"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nhapemail"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>
    <EditText
        android:id="@+id/edtHoTen"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hoten"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>
    <EditText
        android:id="@+id/edtComment"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/comment"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>
    <Button
        android:id="@+id/btnSaveScore"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/luudiem"
        android:textStyle="bold"
        android:textColor="#00BCD4"
        android:textSize="20dp"
        android:background="@drawable/bg_white_corner30"></Button>
    <Button
        android:id="@+id/btnNoSaveScore"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/huy"
        android:textStyle="bold"
        android:textColor="#00BCD4"
        android:textSize="20dp"
        android:background="@drawable/bg_white_corner30"></Button>
</LinearLayout>