<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/white">
    <Button
        android:id="@+id/btnNewGame"
        android:text="Chơi mới"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@drawable/bg_blue_corner30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></Button>
    <Button
        android:visibility="gone"
        android:id="@+id/btnContinue"
        android:text="@string/tieptuc"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@drawable/bg_blue_corner30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"></Button>
    <Button
        android:id="@+id/btnSetting"
        android:text="@string/caidat"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@drawable/bg_blue_corner30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"></Button>
    <Button
        android:id="@+id/btnShowRank"
        android:text="@string/bangxephang"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@drawable/bg_blue_corner30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"></Button>
    <Button
        android:id="@+id/btnExit"
        android:text="@string/thoat"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@drawable/bg_blue_corner30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"></Button>
</LinearLayout>