<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:background="@drawable/custom_dialogsetting"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GAME OVER"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40dp"></TextView>
    <TextView
        android:id="@+id/txtScoreResult"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SCORE: 000000"
        android:textSize="30dp"
        android:textColor="@color/white"></TextView>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnChoiLai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_yellow_corner30"
            android:text="@string/choilai"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"></Button>
        <Button
            android:id="@+id/btnLuuDiem"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_yellow_corner30"
            android:text="@string/luudiem"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"></Button>
        <Button
            android:id="@+id/btnBangXepHang"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_yellow_corner30"
            android:text="@string/bangxephang"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"></Button>
        <Button
            android:id="@+id/btnManHinhChinh"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_yellow_corner30"
            android:text="@string/manhinhchinh"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"></Button>
    </LinearLayout>
</LinearLayout>