<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="100">
    <LinearLayout
        android:weightSum="50"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <ImageButton
            android:id="@+id/btn5050"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:src="@drawable/f50_50_old"
            android:scaleType="centerCrop"
            android:background="@null"
            android:padding="20dp"></ImageButton>
        <ImageButton
            android:id="@+id/btnAsk"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:src="@drawable/ask_old"
            android:background="@null"
            android:scaleType="centerCrop"
            android:padding="20dp"></ImageButton>
        <ImageButton
            android:id="@+id/btnComment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:src="@drawable/comment"
            android:background="@null"
            android:scaleType="centerCrop"
            android:padding="20dp"></ImageButton>
        <ImageButton
            android:id="@+id/btnRandomHelp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:src="@drawable/no_random_help"
            android:background="@null"
            android:scaleType="centerCrop"
            android:padding="20dp"></ImageButton>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/score"
                android:layout_marginEnd="2dp"></ImageView>
            <TextView
                android:id="@+id/txtScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="2000"
                android:textSize="15dp"
                android:textColor="@color/black"></TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="90"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/top1"
                ></ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="30">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/showbestscore"
                        android:textColor="@color/black"></TextView>
                    <TextView
                        android:id="@+id/txtBestScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="10000"
                        android:textColor="@color/black"></TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/showname"
                        android:textColor="@color/black"></TextView>
                    <TextView
                        android:id="@+id/txtShowName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="10000"
                        android:textColor="@color/black"></TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/showdistanceleft"
                        android:textColor="@color/black"></TextView>
                    <TextView
                        android:id="@+id/txtShowDistanceLeft"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="10000"
                        android:textColor="@color/black"></TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:layout_marginTop="10dp"
            android:id="@+id/prgTimeLimit"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/custom_progressbar"
            android:max="30000"
            android:visibility="gone"></ProgressBar>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtQuestionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_blue_corner10"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="40dp"
            android:paddingEnd="10dp"
            android:paddingBottom="40dp"
            android:text="Content question 1"
            android:textColor="@color/white"
            android:textSize="20dp"></TextView>

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_orange_corner30"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/cauhoi"
            android:textSize="15dp"></TextView>
    </RelativeLayout>
    <TextView
        android:id="@+id/txtAnswer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Answer 1"
        android:textStyle="bold"
        android:background="@drawable/bg_blue_corner30"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        ></TextView>
    <TextView
        android:id="@+id/txtAnswer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Answer 2"
        android:textStyle="bold"
        android:background="@drawable/bg_blue_corner30"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        ></TextView>
    <TextView
        android:id="@+id/txtAnswer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Answer 3"
        android:textStyle="bold"
        android:background="@drawable/bg_blue_corner30"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        ></TextView>
    <TextView
        android:id="@+id/txtAnswer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Answer 4"
        android:textStyle="bold"
        android:background="@drawable/bg_blue_corner30"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        ></TextView>
    </LinearLayout>

</LinearLayout>